error.txt
npm.cmd run dev

> server@1.0.0 dev      
> tsx watch src/index.ts

C:\Users\PC\Desktop\wiz\server\src\routes\account.routes.ts:7
  getNotifications,
  ^
SyntaxError: The requested module '../controllers/account.controller.js' does not provide an export named 'getNotifications'
    at #asyncInstantiate (node:internal/modules/esm/module_job:302:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:405:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:660:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.13.0
